--- a/src/app/components/card-body/card-body.component.html
+++ b/src/app/components/card-body/card-body.component.html
@@ -1,5 +1,10 @@
 <ng-container *ngIf="currencyRate">
-  <span [ngClass]="{'card-red': currencyRate.value <= 1, 'card-blue': currencyRate.value > 5,
-  'card-green': currencyRate.value > 1 && currencyRate.value <= 5 }">{{ currencyRate.value | currency : "BRL" }}</span>
+  <span
+    [ngClass]="{
+      'card-red': currencyRate.value <= 1,
+      'card-blue': currencyRate.value > 5,
+      'card-green': currencyRate.value > 1 && currencyRate.value <= 5
+    }"
+    >{{ currencyRate.value | currency : "BRL" }}</span
+  >
 </ng-container>
-
